--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Первая html страница</title>
+<title>Главная html страница</title>
 <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
