--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h2 id="header" align="center"><strong>How To Avoid Wasting Your Most Valuable Online Asset - TIME!</strong></h2>
+<h2 id="header" align="center"><strong>#ЖЕКАГРЕБЕНЬ!</strong></h2>
 
 <a id="myImg" href="http://ruseller.com" target="_blank" ><img src="images/alarm.jpg" width="307" height="450" alt="Будильник"></a>
 
